# starknet-signing-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  build.bat  build.sh  requirements.txt
libs/: CMakeLists.txt
libs/keccak/: CMakeLists.txt  keccak.cpp
libs/starknet-crpyto-ffi/: CMakeLists.txt  Cargo.toml
libs/starknet-crpyto-ffi/src/: lib.rs
libs/starknet-crpyto-ffi/src/cpp-wrapper/src/: CMakeLists.txt  Ecdsa.cpp  Ecdsa.hpp  PedersenHash.cpp
libs/starknet-crpyto-ffi/src/cpp-wrapper/tests/: CMakeLists.txt  test.cpp
libs/starknet-crpyto-ffi/src/rust-api/: CMakeLists.txt  Cargo.toml
libs/starknet-crpyto-ffi/src/rust-api/src/: constants.rs  ecdsa.rs  error_codes.rs  lib.rs  pedersen_hash.rs  utils.rs
libs/starknet-crypto-ffi/: CMakeLists.txt
libs/starknet-crypto-ffi/src/cpp-wrapper/src/: ApiException.hpp  CMakeLists.txt  Ecdsa.cpp  PedersenHash.cpp  PedersenHash.hpp
libs/starknet-crypto-ffi/src/cpp-wrapper/tests/: CMakeLists.txt  test.cpp
libs/starknet-crypto-ffi/src/rust-api/src/: lib.rs  utils.rs
src/: Account.cpp  Account.hpp  Auth.cpp  Auth.hpp  CMakeLists.txt  Config.hpp  EncodableIface.hpp  HashableIface.cpp  HashableIface.hpp  Message.cpp  Message.hpp  Order.cpp  Order.hpp  SignerException.hpp  StarkCurveSigner.cpp  StarkCurveSigner.hpp  StarknetDomain.cpp  StarknetDomain.hpp  Utils.cpp  Utils.hpp  UtilsImpl.hpp  main.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  ClientTest.cpp  TestUtils.cpp  TestUtils.hpp  algo_example.cpp  benchmarks.cpp  perf_test.cpp  test.cpp
