[package]
name = "starknet-crpyto-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-crypto = "0.6.0"
starknet-core = "0.5.1"
starknet-ff = "0.3.4"

[dependencies.ark-ff]
version = "0.4.2"
default-features = false

[dependencies.crypto-bigint]
version = "0.5.1"
default-features = false

[lib]
name = "starknet_crypto_ffi"
crate-type = ["staticlib"]
